# async-template

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md  cargo-generate.toml  dprint.json
src/: lib.rs  main.rs
