[package]
name = "async-template"
version = "0.1.0"
edition = "2021"
description = "{{description}}"
authors = [ "{{authors}}" ]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.19.2", features = ["full"] }
